# devOps

./: .gitignore  main.py  meson.build  requirements.txt
.github/workflows/: sample.yml
.streamlit/: config.toml
src/: Driver.vala  main.vala
